src/core-crm/objects/hed__Course__c/fields/Activity_Description__c.field-meta.xml
<CustomField>
    <fullName>Activity_Description__c</fullName>
    <label>Activity Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>