src/core-crm/objects/hed__Course__c/fields/Activity_Name__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name__c</fullName>
    <label>Activity Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>