src/core-crm/objects/hed__Course__c/fields/Activity_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Activity_Outcomes__c</fullName>
    <inlineHelpText>Core Concepts on the websites</inlineHelpText>
    <label>Activity Outcomes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>