src/core-crm/objects/hed__Course__c/fields/Actual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Actual_Volume__c</fullName>
    <label>Actual Volume</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>