src/core-crm/objects/hed__Course__c/fields/Additional_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_End_Date__c</fullName>
    <label>Additional End Date</label>
    <type>Date</type>
</CustomField>