src/core-crm/objects/hed__Course__c/fields/Blackboard_Content_Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>Blackboard_Content_Delivery_Location__c</fullName>
    <label>Blackboard Content Delivery Location</label>
    <type>Url</type>
</CustomField>