src/core-crm/objects/hed__Course__c/fields/Bottom_Right_Signature_Text__c.field-meta.xml
<CustomField>
    <fullName>Bottom_Right_Signature_Text__c</fullName>
    <label>Bottom Right Signature Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>