src/core-crm/objects/hed__Course__c/fields/Canvas_Sub_Account__c.field-meta.xml
<CustomField>
    <fullName>Canvas_Sub_Account__c</fullName>
    <description>The Canvas sub-account represents the owning faculty for the course</description>
    <label>Canvas Sub-Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUTeX - 125</fullName>
            </value>
            <value>
                <fullName>Faculty of Creation Industries, Education and Social Justice - 139</fullName>
            </value>
            <value>
                <fullName>Faculty of Engineering - 140</fullName>
            </value>
            <value>
                <fullName>Faculty of Health - 141</fullName>
            </value>
            <value>
                <fullName>Faculty of Science - 142</fullName>
            </value>
            <value>
                <fullName>HiQ Student Engagement - 205</fullName>
            </value>
            <value>
                <fullName>IPU - 137</fullName>
            </value>
            <value>
                <fullName>QUT College - 143</fullName>
            </value>
            <value>
                <fullName>Faculty of Business and Law - 138</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>