src/core-crm/objects/hed__Course__c/fields/Certification_Type__c.field-meta.xml
<CustomField>
    <fullName>Certification_Type__c</fullName>
    <label>Certification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate of Participation</fullName>
            </value>
            <value>
                <fullName>Certificate of Achievement</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>QUTeX Digital Badge</fullName>
            </value>
            <value>
                <fullName>Certificate of Completion</fullName>
                <isActive>false</isActive>
                <label>Certificate of Completion</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>