src/core-crm/objects/hed__Course__c/fields/Coach_Type__c.field-meta.xml
<CustomField>
    <fullName>Coach_Type__c</fullName>
    <label>Coach Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QUT Staff</fullName>
            </value>
            <value>
                <fullName>QUT Sessional Staff</fullName>
            </value>
            <value>
                <fullName>QUT Contractor</fullName>
            </value>
            <value>
                <fullName>External Contractor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>