src/core-crm/objects/hed__Course__c/fields/Collaboation_External__c.field-meta.xml
<CustomField>
    <fullName>Collaboation_External__c</fullName>
    <label>Collaboration with External Organisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>