src/core-crm/objects/hed__Course__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <description>The content section is a brief statement of the major topics to be covered. Can be in bullet point format.</description>
    <label>Content</label>
    <length>75000</length>
    <type>LongTextArea</type>
</CustomField>