src/core-crm/objects/hed__Course__c/fields/Content_Location__c.field-meta.xml
<CustomField>
    <fullName>Content_Location__c</fullName>
    <label>Content Location</label>
    <type>TextArea</type>
</CustomField>