src/core-crm/objects/hed__Course__c/fields/Content_Locationv2__c.field-meta.xml
<CustomField>
    <fullName>Content_Locationv2__c</fullName>
    <label>Content Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>