src/core-crm/objects/hed__Course__c/fields/Contentv2__c.field-meta.xml
<CustomField>
    <fullName>Contentv2__c</fullName>
    <inlineHelpText>The content section is a brief statement of the major topics to be covered. Can be in bullet point format.</inlineHelpText>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>