src/core-crm/objects/hed__Course__c/fields/Core_Concepts__c.field-meta.xml
<CustomField>
    <fullName>Core_Concepts__c</fullName>
    <description>From Courseloop - can&apos;t be overwritten for Curriculum record types</description>
    <label>Core Concepts</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>