src/core-crm/objects/hed__Course__c/fields/Core_Conceptsv2__c.field-meta.xml
<CustomField>
    <fullName>Core_Conceptsv2__c</fullName>
    <description>From Courseloop - can&apos;t be overwritten for Curriculum record types</description>
    <label>Core Concepts</label>
    <length>75000</length>
    <type>LongTextArea</type>
</CustomField>