src/core-crm/objects/hed__Course__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <description>Course code is the QUT unique business identifier assigned to a Course.

For SAMS units it is combination of Course Code and Course Version
Format &lt;Course_Code&gt;-&lt;Version no&gt;
eg MAB522-3</description>
    <inlineHelpText>Course code is the QUT unique business identifier assigned to a Course.

For SAMS units it is combination of Course Code and Course Version
Format &lt;Course_Code&gt;-&lt;Version no&gt;
eg MAB522-3</inlineHelpText>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>