src/core-crm/objects/hed__Course__c/fields/Course_Status__c.field-meta.xml
<CustomField>
    <fullName>Course_Status__c</fullName>
    <description>The life Cycle Status of the Course</description>
    <label>Course Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>