src/core-crm/objects/hed__Course__c/fields/CourseLoop_Full_Proposal_ID__c.field-meta.xml
<CustomField>
    <fullName>CourseLoop_Full_Proposal_ID__c</fullName>
    <label>CourseLoop Full Proposal ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>