src/core-crm/objects/hed__Course__c/fields/CourseLoop_Full_Proposal_URL__c.field-meta.xml
<CustomField>
    <fullName>CourseLoop_Full_Proposal_URL__c</fullName>
    <label>CourseLoop Full Proposal URL</label>
    <type>Url</type>
</CustomField>