src/core-crm/objects/hed__Course__c/fields/CourseLoop_Initial_Proposal_URL__c.field-meta.xml
<CustomField>
    <fullName>CourseLoop_Initial_Proposal_URL__c</fullName>
    <label>CourseLoop Initial Proposal URL</label>
    <type>Url</type>
</CustomField>