src/core-crm/objects/hed__Course__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <label>Credits</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>