src/core-crm/objects/hed__Course__c/fields/Curriculum_Leads__c.field-meta.xml
<CustomField>
    <fullName>Curriculum_Leads__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Curriculum Leads</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Courses (Curriculum Leads)</relationshipLabel>
    <relationshipName>Courses2</relationshipName>
    <type>Lookup</type>
</CustomField>