src/core-crm/objects/hed__Course__c/fields/Delivery_Comments__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Comments__c</fullName>
    <label>Delivery Support Comments</label>
    <length>200</length>
    <type>Text</type>
</CustomField>