src/core-crm/objects/hed__Course__c/fields/Delivery_Support_v2__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Support_v2__c</fullName>
    <label>Delivery Support</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catering</fullName>
            </value>
            <value>
                <fullName>Name Badges</fullName>
            </value>
            <value>
                <fullName>Workbook Printed</fullName>
            </value>
            <value>
                <fullName>Handouts Printed</fullName>
            </value>
            <value>
                <fullName>Prework communications</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>