src/core-crm/objects/hed__Course__c/fields/Department_Left_Indented__c.field-meta.xml
<CustomField>
    <fullName>Department_Left_Indented__c</fullName>
    <label>Department(Left Indented)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>