src/core-crm/objects/hed__Course__c/fields/Department_Right_Indented__c.field-meta.xml
<CustomField>
    <fullName>Department_Right_Indented__c</fullName>
    <label>Department(Right Indented)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>