src/core-crm/objects/hed__Course__c/fields/Design_Form_Status__c.field-meta.xml
<CustomField>
    <fullName>Design_Form_Status__c</fullName>
    <label>Design Form Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design Form Sent</fullName>
            </value>
            <value>
                <fullName>Design Form Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>