src/core-crm/objects/hed__Course__c/fields/Diagnostic_Tool_Selection__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Tool_Selection__c</fullName>
    <label>Diagnostic Tool Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DISC Workplace Profile</fullName>
            </value>
            <value>
                <fullName>DISC Sales Profile</fullName>
            </value>
            <value>
                <fullName>DISC 363 For Leaders</fullName>
            </value>
            <value>
                <fullName>TLC Leadership Circle Profile</fullName>
            </value>
            <value>
                <fullName>TLC Manager Edition</fullName>
            </value>
            <value>
                <fullName>TLC Leadership Check In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>