src/core-crm/objects/hed__Course__c/fields/Diagnostic_Tool_Type__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic_Tool_Type__c</fullName>
    <label>Diagnostic Tool Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual Diagnostic Tool</fullName>
            </value>
            <value>
                <fullName>Group Diagnostic Tool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>