src/core-crm/objects/hed__Course__c/fields/Enrolment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Rules__c</fullName>
    <inlineHelpText>If required eg: Prerequisites</inlineHelpText>
    <label>Enrolment Rules</label>
    <length>100</length>
    <type>Text</type>
</CustomField>