src/core-crm/objects/hed__Course__c/fields/Enrolment_Rulesv2__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Rulesv2__c</fullName>
    <inlineHelpText>If required eg: Prerequisites</inlineHelpText>
    <label>Enrolment Rules</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>