src/core-crm/objects/hed__Course__c/fields/External_Organisation__c.field-meta.xml
<CustomField>
    <fullName>External_Organisation__c</fullName>
    <label>External Organisation Details</label>
    <length>200</length>
    <type>Text</type>
</CustomField>