src/core-crm/objects/hed__Course__c/fields/Field_of_Education__c.field-meta.xml
<CustomField>
    <fullName>Field_of_Education__c</fullName>
    <label>Field of Education</label>
    <length>80</length>
    <type>Text</type>
</CustomField>