src/core-crm/objects/hed__Course__c/fields/Group_Dynamics_Tools__c.field-meta.xml
<CustomField>
    <fullName>Group_Dynamics_Tools__c</fullName>
    <label>Group Dynamics Tools</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TLC Collective Leadership Assessment</fullName>
            </value>
            <value>
                <fullName>Prophet Team Insight Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>