src/core-crm/objects/hed__Course__c/fields/hed__Credit_Hours__c.field-meta.xml
<CustomField>
    <fullName>hed__Credit_Hours__c</fullName>
    <label>Credit Hours</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>