src/core-crm/objects/hed__Course__c/fields/hed__Description__c.field-meta.xml
<CustomField>
    <fullName>hed__Description__c</fullName>
    <description>This field has been replaced by the Extended Description field, which accomodates longer descriptions. Your admin can migrate text from the Description to the Extended Description field in EDA Settings | Courses.</description>
    <inlineHelpText>This field has been replaced by the Extended Description field, which accomodates longer descriptions. Your admin can migrate text from the Description to the Extended Description field in EDA Settings | Courses.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>