src/core-crm/objects/hed__Course__c/fields/Is_Curriculum_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Curriculum_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Curriculum Approved</label>
    <type>Checkbox</type>
</CustomField>