src/core-crm/objects/hed__Course__c/fields/LMS_Content_Delivery_Location__c.field-meta.xml
<CustomField>
    <fullName>LMS_Content_Delivery_Location__c</fullName>
    <label>LMS Content Delivery Location</label>
    <type>Url</type>
</CustomField>