src/core-crm/objects/hed__Course__c/fields/LMS_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>LMS_Site_URL__c</fullName>
    <label>LMS Site URL</label>
    <type>Url</type>
</CustomField>