src/core-crm/objects/hed__Course__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>hed__Facility__c.Name</field>
            <operation>contains</operation>
            <value>&apos;QUT Kelvin Grove&apos;, &apos;QUT Gardens Point&apos;, &apos;QUT Canberra&apos;, &apos;QUT Sydney&apos;, &apos;QUT Melbourne&apos;, &apos;Web Conference&apos;, &apos;Externals&apos;, &apos;QUT Cairns&apos;, &apos;QUT NSW Classroom&apos;</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>hed__Facility__c</referenceTo>
    <relationshipLabel>Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <type>Lookup</type>
</CustomField>