src/core-crm/objects/hed__Course__c/fields/Location_Details__c.field-meta.xml
<CustomField>
    <fullName>Location_Details__c</fullName>
    <label>Location Details</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>