src/core-crm/objects/hed__Course__c/fields/LogoUrl__c.field-meta.xml
<CustomField>
    <fullName>LogoUrl__c</fullName>
    <label>LogoUrl</label>
    <type>Url</type>
</CustomField>