src/core-crm/objects/hed__Course__c/fields/Mark_Design_Stage_as_Complete__c.field-meta.xml
<CustomField>
    <fullName>Mark_Design_Stage_as_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark Design Stage as Complete</label>
    <type>Checkbox</type>
</CustomField>