src/core-crm/objects/hed__Course__c/fields/Middle_Left_Signature_Text__c.field-meta.xml
<CustomField>
    <fullName>Middle_Left_Signature_Text__c</fullName>
    <label>Middle Left Signature Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>