src/core-crm/objects/hed__Course__c/fields/Module_Category__c.field-meta.xml
<CustomField>
    <fullName>Module_Category__c</fullName>
    <description>From Courseloop</description>
    <label>Module Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>QUT Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>