src/core-crm/objects/hed__Course__c/fields/Module_Grading_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Module_Grading_Scheme__c</fullName>
    <label>Module Grading Scheme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Marks</fullName>
            </value>
            <value>
                <fullName>Meets Requirements / Does not yet Meet Requirement</fullName>
            </value>
            <value>
                <fullName>Pass / Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>